--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">app1</string>
+    <string name="button_label_toast">toast</string>
+    <string name="toast_message">Hello Toast!</string>
+    <string name="count_initial_value">0</string>
+    <string name="button_label_count">COUNT</string>
 </resources>
