--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,9 @@
     <string name="toast_message">Hello Toast!</string>
     <string name="count_initial_value">0</string>
     <string name="button_label_count">COUNT</string>
+    <string name="new_button">Button</string>
+    <string name="button_2">Button</string>
+    <string name="button3">Button</string>
+    <string name="disable">Disabled</string>
+    <string name="newly_disabled">newly disabled</string>
 </resources>
